Undo maxpermsize addition.
Turns out it is only supported in JDK 8.