@@ -1,26 +1,26 @@
 ## Minimal (G1GC)
 
-`-Xms2G -Xmx2G -XX:MaxPermSize=128M -Dfile.encoding=UTF-8 -Dowo.handshake.disable=true -XX:+UseG1GC -XX:+DisableExplicitGC`
+`-Xms2G -Xmx2G -Dfile.encoding=UTF-8 -Dowo.handshake.disable=true -XX:+UseG1GC -XX:+DisableExplicitGC`
 
 ## Heavy (G1GC)
 
-`-Xms2G -Xmx2G -XX:MaxPermSize=128M -Dfile.encoding=UTF-8 -Dowo.handshake.disable=true -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true`
+`-Xms2G -Xmx2G -Dfile.encoding=UTF-8 -Dowo.handshake.disable=true -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true`
 
 ## Minimal (ZGC)
 
-`-Xms2G -Xmx2G -XX:MaxPermSize=128M -Dfile.encoding=UTF-8 -Dowo.handshake.disable=true -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+UseZGC -XX:-ZUncommit`
+`-Xms2G -Xmx2G -Dfile.encoding=UTF-8 -Dowo.handshake.disable=true -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+UseZGC -XX:-ZUncommit`
 
 ## Heavy (ZGC)
 
-`-Xms2G -Xmx2G -XX:MaxPermSize=128M -Dfile.encoding=UTF-8 -Dowo.handshake.disable=true -XX:+IgnoreUnrecognizedVMOptions -XX:+UnlockExperimentalVMOptions -XX:+UnlockDiagnosticVMOptions -XX:-OmitStackTraceInFastThrow -XX:+ShowCodeDetailsInExceptionMessages -XX:+DisableExplicitGC -XX:-UseParallelGC -XX:-UseParallelOldGC -XX:+PerfDisableSharedMem -XX:+UseZGC -XX:-ZUncommit -XX:ZUncommitDelay=300 -XX:ZCollectionInterval=5 -XX:ZAllocationSpikeTolerance=2.0 -XX:+AlwaysPreTouch -XX:+UseTransparentHugePages -XX:LargePageSizeInBytes=2M -XX:+UseLargePages -XX:+ParallelRefProcEnabled`
+`-Xms2G -Xmx2G -Dfile.encoding=UTF-8 -Dowo.handshake.disable=true -XX:+IgnoreUnrecognizedVMOptions -XX:+UnlockExperimentalVMOptions -XX:+UnlockDiagnosticVMOptions -XX:-OmitStackTraceInFastThrow -XX:+ShowCodeDetailsInExceptionMessages -XX:+DisableExplicitGC -XX:-UseParallelGC -XX:-UseParallelOldGC -XX:+PerfDisableSharedMem -XX:+UseZGC -XX:-ZUncommit -XX:ZUncommitDelay=300 -XX:ZCollectionInterval=5 -XX:ZAllocationSpikeTolerance=2.0 -XX:+AlwaysPreTouch -XX:+UseTransparentHugePages -XX:LargePageSizeInBytes=2M -XX:+UseLargePages -XX:+ParallelRefProcEnabled`
 
 ## Minimal (ShenandoahGC)
 
-`-Xms2G -Xmx2G -XX:MaxPermSize=128M -Dfile.encoding=UTF-8 -Dowo.handshake.disable=true -XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC`
+`-Xms2G -Xmx2G -Dfile.encoding=UTF-8 -Dowo.handshake.disable=true -XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC`
 
 ## Heavy (ShenandoahGC)
 
-`-Xms2G -Xmx2G -XX:MaxPermSize=128M -Dfile.encoding=UTF-8 -Dowo.handshake.disable=true -XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:ShenandoahAllocSpikeFactor=5 -XX:ShenandoahControlIntervalAdjustPeriod=1000 -XX:ShenandoahControlIntervalMax=10 -XX:ShenandoahControlIntervalMin=1 -XX:ShenandoahInitFreeThreshold=70 -XX:ShenandoahGarbageThreshold=25 -XX:ShenandoahGuaranteedGCInterval=300000 -XX:ShenandoahMinFreeThreshold=10 -XX:-ShenandoahRegionSampling -XX:ShenandoahRegionSamplingRate=40`
+`-Xms2G -Xmx2G -Dfile.encoding=UTF-8 -Dowo.handshake.disable=true -XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:ShenandoahAllocSpikeFactor=5 -XX:ShenandoahControlIntervalAdjustPeriod=1000 -XX:ShenandoahControlIntervalMax=10 -XX:ShenandoahControlIntervalMin=1 -XX:ShenandoahInitFreeThreshold=70 -XX:ShenandoahGarbageThreshold=25 -XX:ShenandoahGuaranteedGCInterval=300000 -XX:ShenandoahMinFreeThreshold=10 -XX:-ShenandoahRegionSampling -XX:ShenandoahRegionSamplingRate=40`
 
 ## Disclaimers
 
